layout bug repaired

--- a/app/assets/stylesheets/like_machine.scss
+++ b/app/assets/stylesheets/like_machine.scss
@@ -16,7 +16,6 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
 }
 
 #logo {
@@ -94,7 +93,7 @@ body {
 	#content {
 		float: none;
 	}
-	padding-bottom: 100px;
+	
 	.link_container {
 		padding: 2em 1em;
 		border-bottom: 1px solid #e9e9e9;
